Thu Feb  1 20:41:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed email address in bcmxcp.c.

Tue Jan 30 16:00:54 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - drivers/tripplite-hid.c: #include main.h to get prototype for getval

Tue Jan 30 15:55:44 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - snmp-ups.[ch]: implement already documented snmp_version parameter

Mon Jan 29 17:28:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: trimming trailing '\n' from 'ans' in debug code had a bad
   side effect (clients wouldn't work anymore), fixing it

Mon Jan 29 06:15:45 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: removed "experimental" from Tripplite SmartOnline
   SU1500RTXL2ua, as it has been tested (thanks to Patrick Krepps).
 - usbhid-ups.c: added missing "else" case, to fix spurious "base
   variable does not exist" error.

Sun Jan 28 20:08:14 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/driver.list: recent Sweex UPS'es are compatible with the 'megatec'
   driver (unfortunately, there is no way to tell if you have a recent
   model)

Sun Jan 28 15:34:02 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c: added some debug statements for sstate_dead() so that
   we can figure out why a UPS is declared stale
 - server/upsd.c: trim trailing '\n' parameter in debug code

Sat Jan 27 19:19:04 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c, server/conf.c, man/upsd.conf.5, conf/upsd.conf.sample: The
   interfaces specified in upsd.conf should only be configured at startup
   (someone might have used privileged ports, which need root privileges to
   create listening sockets). This is also consistent with previous behaviour,
   where the '-i <interface>' and '-p <port>' options would only be applied at
   startup and not on reload.

Fri Jan 26 22:47:55 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
