@@ -15,6 +15,13 @@ libhidups      0x0003      0x0764   0x0005    0x0000       0x0000       0x00    
 libhidups      0x0003      0x0764   0x0501    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Powercom USB 
 libhidups      0x0003      0x0d9f   0x0001    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+libhidups      0x0003      0x0d9f   0x0002    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# Agiler - megatec_usb
+libhidups      0x0003      0x05b8   0x0000    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# Krauler - megatec_usb
+libhidups      0x0003      0x0001   0x0000    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# Ablerex - megatec_usb
+libhidups      0x0003      0xffff   0x0000    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Powerware USB 
 libhidups      0x0003      0x0592   0x0002    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Tripp Lite
